--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13951,7 +13951,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count: 0\tCoord: [-1. -1.]\t\tAcc: 11.363636363636363\tLoss: 62.495\n"
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 11.363636363636363\tLoss: 62.495\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 12.855113636363637\tLoss: 58.542\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 11.505681818181818\tLoss: 53.224\n",
+      "Coord: [-0.5 -1. ]\tAcc: 14\tLoss: 59.235\r"
      ]
     }
    ],
