--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13973,7 +13973,13 @@
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 14.630681818181818\tLoss: 195.618\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 12.642045454545455\tLoss: 375.613\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 11.363636363636363\tLoss: 735.904\n",
-      "Coord: [-1.  -0.9]\tAcc: 8\tLoss: 1494.8377\r"
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.369318181818182\tLoss: 853.685\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.369318181818182\tLoss: 200.912\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 11.363636363636363\tLoss: 90.787\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 17.755681818181817\tLoss: 53.5\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 24.71590909090909\tLoss: 44.228\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 27.62784090909091\tLoss: 40.466\n",
+      "Coord: [ 0.2 -0.9]\tAcc: 27\tLoss: 47.402\r"
      ]
     }
    ],
