--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13876,7 +13876,11 @@
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 15.625\tLoss: 71.948\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.991477272727273\tLoss: 96.701\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 12.286931818181818\tLoss: 128.138\n",
-      "Coord: [ 0.8 -1. ]\tAcc: 14\tLoss: 204.026\r"
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.369318181818182\tLoss: 199.564\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.517045454545455\tLoss: 327.43\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.369318181818182\tLoss: 332.749\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 11.576704545454545\tLoss: 156.392\n",
+      "Coord: [-0.6 -0.9]\tAcc: 13\tLoss: 121.839\r"
      ]
     }
    ],
