--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13958,7 +13958,9 @@
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 13.707386363636363\tLoss: 67.371\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 12.357954545454545\tLoss: 90.175\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 12.215909090909092\tLoss: 102.852\n",
-      "Coord: [ 0.3 -1. ]\tAcc: 14\tLoss: 103.937\r"
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 12.002840909090908\tLoss: 103.349\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 13.210227272727273\tLoss: 96.787\n",
+      "Coord: [ 0.7 -1. ]\tAcc: 19\tLoss: 95.558\r"
      ]
     }
    ],
