--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13962,7 +13962,8 @@
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 13.210227272727273\tLoss: 96.787\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.28125\tLoss: 91.127\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 13.707386363636363\tLoss: 86.725\n",
-      "Coord: [-1.  -0.9]\tAcc: 11\tLoss: 56.966\r"
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.565340909090908\tLoss: 48.74\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n"
      ]
     }
    ],
