--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13963,7 +13963,8 @@
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.28125\tLoss: 91.127\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 13.707386363636363\tLoss: 86.725\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.565340909090908\tLoss: 48.74\n",
-      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n"
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n",
+      "Coord: [-0.6 -0.9]\tAcc: 8\tLoss: 51.4072\r"
      ]
     }
    ],
@@ -14021,10 +14022,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
