--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13884,7 +13884,11 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 11.079545454545455\tLoss: 72.835\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 15.411931818181818\tLoss: 41.807\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 20.170454545454547\tLoss: 39.946\n",
-      "Coord: [ 0.2 -0.9]\tAcc: 21\tLoss: 44.572\r"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 15.767045454545455\tLoss: 58.622\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 14.488636363636363\tLoss: 76.204\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 12.144886363636363\tLoss: 111.661\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 11.221590909090908\tLoss: 177.038\n",
+      "Coord: [ 1.  -0.9]\tAcc: 7\tLoss: 218.0214\r"
      ]
     }
    ],
@@ -13942,11 +13946,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# ==== 4. Weight - PCA - whole norm ===="
+   ]
   },
   {
    "cell_type": "code",
