--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13964,7 +13964,8 @@
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 13.707386363636363\tLoss: 86.725\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.565340909090908\tLoss: 48.74\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n",
-      "Coord: [-0.6 -0.9]\tAcc: 8\tLoss: 51.4072\r"
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 13.068181818181818\tLoss: 42.209\n",
+      "Coord: [-0.4 -0.9]\tAcc: 16\tLoss: 48.524\r"
      ]
     }
    ],
@@ -14024,7 +14025,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# ==== 4. Weight - PCA - whole norm ===="
+   ]
   },
   {
    "cell_type": "code",
