--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13981,7 +13981,15 @@
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 27.62784090909091\tLoss: 40.466\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.241477272727273\tLoss: 61.42\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 15.909090909090908\tLoss: 107.997\n",
-      "Coord: [ 0.6 -0.9]\tAcc: 25\tLoss: 134.158\r"
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 13.494318181818182\tLoss: 206.374\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 11.789772727272727\tLoss: 408.295\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.511363636363637\tLoss: 829.975\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.511363636363637\tLoss: 227.807\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 11.008522727272727\tLoss: 80.316\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.619318181818183\tLoss: 40.562\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 27.485795454545453\tLoss: 29.141\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 32.8125\tLoss: 26.012\n",
+      "Coord: [ 0.1 -0.8]\tAcc: 42\tLoss: 25.505\r"
      ]
     }
    ],
@@ -14039,11 +14047,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# ==== 4. Weight - PCA - whole norm ===="
+   ]
   },
   {
    "cell_type": "code",
